[gd_scene load_steps=2 format=3 uid="uid://dh7eil46mmi2a"]

[ext_resource type="Script" uid="uid://c56t75d1ug0jh" path="res://shared/ui/component/panels/templates/abc_view.gd" id="1_l74j8"]

[node name="TemplateView" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_l74j8")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0

[node name="LeftSidebar" type="VBoxContainer" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 300)
layout_mode = 2
size_flags_vertical = 3

[node name="BGLeftSidebarDebug" type="ColorRect" parent="HBoxContainer/LeftSidebar"]
unique_name_in_owner = true
layout_mode = 2
color = Color(0.6, 0.7, 1, 0.5)

[node name="MainArea" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopBar" type="HBoxContainer" parent="HBoxContainer/MainArea"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
size_flags_horizontal = 3

[node name="BGTopBarDebug" type="ColorRect" parent="HBoxContainer/MainArea/TopBar"]
unique_name_in_owner = true
layout_mode = 2
color = Color(0.7, 1, 0.7, 0.5)

[node name="CentrePanel" type="PanelContainer" parent="HBoxContainer/MainArea"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 300)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BGCentrePanelDebug" type="ColorRect" parent="HBoxContainer/MainArea/CentrePanel"]
unique_name_in_owner = true
layout_mode = 2
color = Color(1, 1, 1, 0.5)

[node name="RightSidebar" type="VBoxContainer" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 300)
layout_mode = 2
size_flags_vertical = 3

[node name="BGRightSidebarDebug" type="ColorRect" parent="HBoxContainer/RightSidebar"]
unique_name_in_owner = true
layout_mode = 2
color = Color(0.8, 0.8, 0.8, 0.5)
